cabal-version: >= 1.10

name:           sbv-program
version:        1.0.0.0
description:    Component-based program synthesis using SBV
homepage:       https://github.com/arrowd/sbv-program
bug-reports:    https://github.com/arrowd/sbv-program/issues
author:         Gleb Popov
maintainer:     6yearold@gmail.com
copyright:      2023 Gleb Popov
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/arrowd/sbv-synth

library
  exposed-modules:
      Data.SBV.Program
      Data.SBV.Program.Examples
      Data.SBV.Program.SimpleLibrary
      Data.SBV.Program.Types
      Data.SBV.Program.Utils
  hs-source-dirs:
      src
  build-depends:
      base
      , bifunctors
      , containers
      , pretty-simple
      , sbv
  default-extensions:
      RecordWildCards
  default-language: Haskell2010

test-suite smoketest
  hs-source-dirs:
    test
  main-is: SmokeTest.hs
  build-depends:
      base
      , sbv
      , sbv-program
  type: exitcode-stdio-1.0
  default-language: Haskell2010
