cabal-version: 3.8

name:           sbv-program
version:        1.1.0.0
category:       SMT, Symbolic Computation, Bit vectors, Formal Methods
synopsis:       Component-based program synthesis using SBV
description:    Given a library of available componen functions, synthesize a program implementing a specification.
homepage:       https://github.com/arrowd/sbv-program
bug-reports:    https://github.com/arrowd/sbv-program/issues
author:         Gleb Popov
maintainer:     6yearold@gmail.com
copyright:      2023 Gleb Popov
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/arrowd/sbv-program

library
  exposed-modules:
      Data.SBV.Program
      Data.SBV.Program.Examples
      Data.SBV.Program.SimpleLibrary
      Data.SBV.Program.Types
      Data.SBV.Program.Utils
      Data.SBV.Program.MyDefs
  hs-source-dirs:
      src
  build-depends:
      base >= 4.18.0.0 && < 5,
      containers >= 0.6.5 && < 0.8,
      pretty-simple >= 4.1.2 && < 5.0,
      sbv >= 9.0 && < 11.0,
      vector,
  default-extensions:
      BangPatterns
      DerivingStrategies
      ImportQualifiedPost
      LambdaCase
      NoGeneralizedNewtypeDeriving
      RecordWildCards
      RoleAnnotations
      UnicodeSyntax
  default-language:
      GHC2021

test-suite smoketest
  hs-source-dirs:
    test
  main-is: SmokeTest.hs
  build-depends:
      base
      , sbv
      , sbv-program
  type: exitcode-stdio-1.0
  default-language: Haskell2010
